--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 href="../News-website/indexados/como-avanza-la-pandemia-en-todo-el-mundo/como-avanza-la-pandemia-en-todo-el-mundo.html">Coronavirus</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item"
-                                href="../News-website/indexados/La-inflación-de-junio-fue-de-2,2-y-acumuló-un- suba-de-42,8-en-los-últimos-12-meses/La-inflación-de-junio-fue-de-2,2-y-acumuló-un- suba-de-42,8-en-los-últimos-12-meses.html suba-de-42,8-en-los-últimos-12-meses/La-inflación-de-junio-fue-de-2,2-y-acumuló-un- suba-de-42,8-en-los-últimos-12-meses.html">Economía</a>
+                                href="../News-website/indexados/La-inflación-de-junio-fue-de-2,2-y-acumuló-un- suba-de-42,8-en-los-últimos-12-meses/La-inflación-de-junio-fue-de-2,2-y-acumuló-un- suba-de-42,8-en-los-últimos-12-meses.html">Economía</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item"
                                 href="../News-website/indexados/El-72-de-los-españoles-cree-que-las-empresas-deben-revisar-la duración-de-la-semana-laboral/El-72-de-los-españoles-cree-que-las-empresas-deben-revisar-la duración-de-la-semana-laboral.html">Mundo</a>
