--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a class="dropdown-item"
                                 href="../News-website/indexados/como-avanza-la-pandemia-en-todo-el-mundo/como-avanza-la-pandemia-en-todo-el-mundo.html">Coronavirus</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item"
+                            a class="dropdown-item"
                                 href="../News-website/indexados/La-inflación-de-junio-fue-de-2,2-y-acumuló-un- suba-de-42,8-en-los-últimos-12-meses/La-inflación-de-junio-fue-de-2,2-y-acumuló-un- suba-de-42,8-en-los-últimos-12-meses.html">Economía</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item"
